Fix spacing issues.

--- a/main.css
+++ b/main.css
@@ -223,7 +223,7 @@ body.playing .reel-inner {
 }
 
 #buttons {
-  margin: 15px 0;
+  margin: 30px 0;
 }
 
 button {
@@ -244,7 +244,7 @@ button:focus {
 }
 
 #config {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 #config > div {
